feature(adapter): add check is adapter transactional (#20)
* feature(adapter): add check is adapter transactional

* style(repository.go.tmpl): add indent

* refactor(storage): map transactionalStorages

* move map from adapter.go to storage.go
* style

* refactor(generate-service): add service generation logic

* refactor(config): add method GetChunksByScope

* add new functional in renreder
* edit templates (app, container, database)
* edit field "scope" in chunks

* chore(service-methods): refactor methods

* refactor(renderer, chunks, config): add renderInitializationsWithoutError

* feature(support-http-repo): add http storage

--- a/internal/generator/templates/app/internal/app/app.go.tmpl
+++ b/internal/generator/templates/app/internal/app/app.go.tmpl
@@ -8,7 +8,7 @@ package app
 import (
 	"sync"
 	"errors"
-    {{ renderImports "storage" "definition" .Chunks }}
+    {{ renderImports "storage" "definition" . }}
 	"{{ .App.Module }}/internal/config"
 	"go.uber.org/zap/zapcore"
 )
@@ -29,7 +29,7 @@ type App struct {
 	//hc     health.Checker
 	//hcOnce *sync.Once
 
-	{{ renderDefinition "storage" .Chunks }}
+	{{ renderDefinition "storage" . }}
 
 	logger Logger
 }
@@ -54,10 +54,11 @@ func NewApp(configPath string) (*App, error) {
 	//goro:init healthChecker
 	//app.initHealthChecker()
 
-	{{ renderInitializationsWithError "storage" "app" .Chunks }}
+	{{ renderInitializationsWithError "storage" "app" . }}
+  {{ renderInitializationsWithoutError "storage" "app" . }}
 
 	//goro:init dependencies
-	app.c = NewContainer({{range .Chunks}}{{if eq .Scope `storage`}}app.{{.Name}},{{end}}{{end}})
+	app.c = NewContainer({{range .Chunks}}{{if contains .Scope "storage"}}app.{{.Name}},{{end}}{{end}})
 
 	return app, nil
 }
