--- a/internal/generator/templates/app/internal/app/http.go.tmpl
+++ b/internal/generator/templates/app/internal/app/http.go.tmpl
@@ -10,7 +10,7 @@ import (
 	"{{ .App.Module }}/internal/handler/http/api/v1"
 	"github.com/hanagantig/gracy"
 	"fmt"
-	"go.uber.org/zap"
+  {{ .Logger.GetImportPackage }}
   {{ renderImports "storage.http" "build" . }}
 )
 
@@ -21,7 +21,7 @@ func (a *App) StartHTTPServer() error {
 
 	err := gracy.Wait()
 	if err != nil {
-		a.logger.Error("failed to gracefully shutdown server", zap.Error(err))
+    {{ .Logger.GetFailStopHTTPServerMessage }}
 		return err
 	}
 	a.logger.Info("server gracefully stopped")
@@ -49,7 +49,7 @@ func (a *App) startHTTPServer() {
 	a.logger.Info(fmt.Sprintf("starting HTTP server at %s:%s", a.cfg.HTTP.Host, a.cfg.HTTP.Port))
 	err := srv.Start()
 	if err != nil {
-		a.logger.Fatal("Fail to start %s http server:", zap.String("app",a.cfg.App.Name), zap.Error(err))
+    {{ .Logger.GetFailStartHTTPServerMessage }}
 	}
 }
 
