--- a/internal/generator/templates/app/internal/handler/http/api/v1/pong.go.tmpl
+++ b/internal/generator/templates/app/internal/handler/http/api/v1/pong.go.tmpl
@@ -2,7 +2,7 @@ package v1
 
 import (
 	"encoding/json"
-	"go.uber.org/zap"
+  {{ .Logger.GetImportPackage }}
 	"net/http"
 )
 
@@ -13,6 +13,6 @@ func (h Handler) Ping(w http.ResponseWriter, r *http.Request) {
 	res, err := h.uc.Pong(ctx)
 	err = json.NewEncoder(w).Encode(res)
 	if err != nil {
-		h.logger.Error("failed to encode json", zap.Error(err))
+    {{ .Logger.GetExamplePongHTTPFailMessage }}
 	}
 }
