--- a/internal/generator/templates/app/pkg/logger/logger.go.tmpl
+++ b/internal/generator/templates/app/pkg/logger/logger.go.tmpl
@@ -1,17 +1,9 @@
 package logger
 
 import (
-	"go.uber.org/zap"
-	"go.uber.org/zap/zapcore"
+  {{ renderImports "logger" "build" . }}
 )
 
-type Logger interface {
-	Debug(string, ...zapcore.Field)
-	Info(string, ...zapcore.Field)
-	Error(string, ...zapcore.Field)
-	Fatal(string, ...zapcore.Field)
-}
+{{ renderPkgInterface "logger" . }}
 
-func NewLogger() (*zap.Logger, error) {
-	return zap.NewProduction()
-}
+{{ renderBuild "logger" . }}
